--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <title>React App</title>
+    <title>Background Trade Control</title>
   </head>
   <body>
     <noscript>
