Re-introduced chart with the right colours Made it resizable Tweaked colours to match tradingview

--- a/oco-ui/public/index.html
+++ b/oco-ui/public/index.html
@@ -6,7 +6,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Background Trade Control</title>
   </head>
-  <body>
+  <body style="background-color: #131722">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
