--- a/oco-ui/public/index.html
+++ b/oco-ui/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=1.0">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
     <title>Background Trade Control</title>
   </head>
   <body style="background-color: #131722">
