--- a/orko-ui/public/index.html
+++ b/orko-ui/public/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=1.0">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-    <title>Background Trade Control</title>
-  </head>
-  <body style="background-color: #131722">
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=1.0">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <title>Orko</title>
+</head>
+
+<body style="background-color: #131722">
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+</body>
+
 </html>
