--- a/orko-ui/public/index.html
+++ b/orko-ui/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=1.0">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
