--- a/orko-login/public/index.html
+++ b/orko-login/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=0.9, maximum-scale=1.0"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Orko</title>
+    <title>Login - Orko</title>
   </head>
 
   <body style="background-color: #131722">
